--- a/.github/workflows/uitest-action/action.yml
+++ b/.github/workflows/uitest-action/action.yml
@@ -48,7 +48,7 @@ runs:
     
     # install qfs
     - name: install qfs (win)
-      if: runner.os == 'Linux'
+      if: runner.os == 'Windows'
       working-directory: ./QF-Test
       shell: cmd
       run: QF-Test-6.0.4-sfx.exe
