--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,7 +54,7 @@ jobs:
     
     # install qfs
     - name: install qfs (win)
-      if: runner.os == 'Linux'
+      if: runner.os == 'Windows'
       working-directory: ./QF-Test
       shell: cmd
       run: QF-Test-6.0.4-sfx.exe
