--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,7 +67,7 @@ jobs:
       run:  |
         tar xzvf qftest.tar.gz
         cd qftest/qftest-6.0.4
-        printf 'y\ny\n1024\ng\n' | ./setup
+        printf 'y\ny\n1024\ng\n' | ./qftest/qftest-6.0.4/setup.sh
     
     
     - name: install qfs (mac)
@@ -76,7 +76,7 @@ jobs:
       shell: bash
       run:  |
         sudo hdiutil attach qftest.dmg
-        sudo cp -R /Volumes/qftest ${{ github.workspace }}/QF-Test
+        sudo cp -R /Volumes/QF-Test\ 6.0.4 ${{ github.workspace }}/QF-Test
         sudo hdiutil unmount /Volumes/qftest/
     
 ####
@@ -93,7 +93,7 @@ jobs:
                 -replace [regex]::escape('${installer:adito.installer.basepath}'), '${{ github.workspace }}' `
              } | Set-Content QF-Test\ADITOdesigner.conf; `
              Move-Item -Path QF-Test\ADITOdesigner.conf -Destination application\designer\target\aditodesigner\etc -Force; `
-             Get-Content -Path application\designer\target\aditodesigner\etc\ADITOdesigner.conf `
+             Get-Content -Path application\designer\target\aditodesigner\etc\ADITOdesigner.conf; `
              Move-Item -Path QF-Test\license -Destination QF-Test\qftest\qftest-6.0.4 -Force
       env:
         scaleuiwin: '-J-Dsun.java2d.dpiaware=true'
