--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -129,7 +129,7 @@ jobs:
         sed -i '' 's!\${installer:adito.installer.basepath}!${{ github.workspace }}!g' QF-Test/ADITOdesigner.conf
         mv -f QF-Test/ADITOdesigner.conf application/designer/target/aditodesigner/etc
         cat application/designer/target/aditodesigner/etc/ADITOdesigner.conf
-        mv -f QF-Test/license QF-Test/qftest/qftest-6.0.4
+        mv -f QF-Test/license QF-Test/qftest/qftest-6.0.4/
       env:
         scaleuimac: ''
         fullVersion: '1234.5.6.7'
