--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -111,13 +111,6 @@ jobs:
         sed -i 's!\${installer:adito.installer.basepath}!${{ github.workspace }}!g' QF-Test/ADITOdesigner.conf
         mv -f QF-Test/ADITOdesigner.conf application/designer/target/aditodesigner/etc
         cat application/designer/target/aditodesigner/etc/ADITOdesigner.conf
-        ls
-        cd QF-Test
-        ls 
-        cd qftest
-        ls
-        cd qftest-6.0.4
-        ls
         mv -f QF-Test/license QF-Test/qftest/qftest-6.0.4
       env:
         scaleuilin: ''
@@ -135,7 +128,14 @@ jobs:
         sed -i '' 's!\${installer:adito.installer.basepath}/lib/designer!${{ github.workspace }}/application/designer/target/aditodesigner!g' QF-Test/ADITOdesigner.conf
         sed -i '' 's!\${installer:adito.installer.basepath}!${{ github.workspace }}!g' QF-Test/ADITOdesigner.conf
         mv -f QF-Test/ADITOdesigner.conf application/designer/target/aditodesigner/etc
-        cat application/designer/target/aditodesigner/etc/ADITOdesigner.conf
+        # cat application/designer/target/aditodesigner/etc/ADITOdesigner.conf
+        ls
+        cd QF-Test
+        ls 
+        cd qftest
+        ls
+        cd qftest-6.0.4
+        ls
         mv -f QF-Test/license QF-Test/qftest/qftest-6.0.4
       env:
         scaleuimac: ''
