--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -132,9 +132,9 @@ jobs:
         ls
         cd QF-Test
         ls 
-        cd qftest
+        cd QF-Test\ 6.0.4
         ls
-        cd qftest-6.0.4
+        cd qftest
         ls
         mv -f QF-Test/license QF-Test/qftest/qftest-6.0.4
       env:
