--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -130,13 +130,17 @@ jobs:
         mv -f QF-Test/ADITOdesigner.conf application/designer/target/aditodesigner/etc
         # cat application/designer/target/aditodesigner/etc/ADITOdesigner.conf
         ls
+        printf "\n"
         cd QF-Test
-        ls 
+        ls
+        printf "\n"
         cd QF-Test\ 6.0.4
         ls
+        printf "\n"
         cd qftest
         ls
-        mv -f QF-Test/license QF-Test/qftest/qftest-6.0.4
+        printf "\n"
+        #mv -f QF-Test/license QF-Test/QF-Test\ 6.0.4/qftest/qftest-6.0.4
       env:
         scaleuimac: ''
         fullVersion: '1234.5.6.7'
