--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -137,10 +137,13 @@ jobs:
         cd QF-Test\ 6.0.4
         ls
         printf "\n"
-        cd qftest
+        cd Applications
         ls
         printf "\n"
-        #mv -f QF-Test/license QF-Test/QF-Test\ 6.0.4/qftest/qftest-6.0.4
+        cd bin
+        ls
+        printf "\n"
+        mv -f QF-Test/license QF-Test/QF-Test\ 6.0.4/Applications
       env:
         scaleuimac: ''
         fullVersion: '1234.5.6.7'
