--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -131,7 +131,7 @@ jobs:
         # cat application/designer/target/aditodesigner/etc/ADITOdesigner.conf
         ls
         printf "\n"
-        mv -f QF-Test/license QF-Test/QF-Test\ 6.0.4
+        sudo mv -f QF-Test/license QF-Test/QF-Test\ 6.0.4
       env:
         scaleuimac: ''
         fullVersion: '1234.5.6.7'
