--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -132,6 +132,9 @@ jobs:
         ls
         printf "\n"
         sudo mv -f QF-Test/license QF-Test/QF-Test\ 6.0.4
+        printf "\n"
+        cd QF-Test\ 6.0.4/qf-test.app
+        ls
       env:
         scaleuimac: ''
         fullVersion: '1234.5.6.7'
