--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -133,7 +133,10 @@ jobs:
         printf "\n"
         sudo mv -f QF-Test/license QF-Test/QF-Test\ 6.0.4
         printf "\n"
-        cd QF-Test\ 6.0.4/qf-test.app
+        cd QF-Test\ 6.0.4
+        ls
+        printf "\n"
+        cd qf-test.app
         ls
       env:
         scaleuimac: ''
