--- a/.github/workflows/uitest-action/action.yml
+++ b/.github/workflows/uitest-action/action.yml
@@ -1,3 +1,5 @@
+# check test.yml for latest changes
+
 name: "Execute UI Tests"
 description: "Executes all ui tests" # needs license & ADITOdesigner.conf in QF-Test folder
 inputs:
