--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,13 +77,20 @@ jobs:
       working-directory: ./QF-Test
       shell: bash
       run:  |
-        sudo cd /Volumes
-        sudo ls
         sudo hdiutil attach qftest.dmg
         sudo cp -R /Volumes/QF-Test\ 6.0.4 ${{ github.workspace }}/QF-Test
         sudo hdiutil unmount /Volumes/QF-Test\ 6.0.4/
     
 ####
+    
+    - name: check volumes
+      if: runner.os == 'macOS'
+      working-directory: /Volumes
+      shell: bash
+      run: |
+        sudo pwd
+        sudo ls
+    
     
     # edit ADITOdesigner.conf & move ADITOdesigner.conf + license to the right directory
     - name: ADITOdesigner.conf (win)
