--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,13 +77,8 @@ jobs:
       working-directory: ./QF-Test
       shell: bash
       run:  |
+        sudo ls /Volumes
         sudo hdiutil attach qftest.dmg
-        sudo cd /Volumes
-        sudo pwd
-        sudo ls
-        sudo cd QF-Test
-        sudo pwd
-        sudo ls
         sudo cp -R /Volumes/QF-Test\ 6.0.4 ${{ github.workspace }}/QF-Test
         sudo hdiutil unmount /Volumes/QF-Test\ 6.0.4/
     
