--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -133,9 +133,9 @@ jobs:
         # cat application/designer/target/aditodesigner/etc/ADITOdesigner.conf
         ls
         printf "\n"
-        sudo mv -f QF-Test/license QF-Test/QF-Test\ 6.0.4
-        printf "\n"
-        cd QF-Test\ 6.0.4
+        # sudo mv -f QF-Test/license QF-Test/QF-Test\ 6.0.4
+        # printf "\n"
+        cd QF-Test
         ls
       env:
         scaleuimac: ''
