--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -160,7 +160,7 @@ jobs:
       if: runner.os == 'macOS'
       working-directory: ./QF-Test
       shell: bash
-      run: QF-Test\ 6.0.4/qf-test.app -batch -nomessagewindow -verbose -run QF-Test\ 6.0.4/Applications/Utilities/demo/carconfig/carconfig_de.qft
+      run: open QF-Test\ 6.0.4/qf-test.app --args -batch -nomessagewindow -verbose -run QF-Test\ 6.0.4/Applications/Utilities/demo/carconfig/carconfig_de.qft
     
     
     
