--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -137,6 +137,10 @@ jobs:
         # printf "\n"
         cd QF-Test
         ls
+        printf "\n"
+        printf "\n"
+        cd QF-Test\ 6.0.4/qf-test.app/
+        ls
       env:
         scaleuimac: ''
         fullVersion: '1234.5.6.7'
