--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-# issue: mac os dmg in terminal: folder name? - to do (line 134)
+# issue: starting the .app in macos is weird, no terminal output, line 163
 
 
 on:
