--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -138,8 +138,13 @@ jobs:
         cd QF-Test
         ls
         printf "\n"
+        cd QF-Test\ 6.0.4/
+        ls
         printf "\n"
-        cd QF-Test\ 6.0.4/qf-test.app/
+        cd qf-test.app/
+        ls
+        printf "\n"
+        cd Contents/
         ls
       env:
         scaleuimac: ''
