--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -139,13 +139,14 @@ jobs:
         ls
         printf "\n"
         cd QF-Test\ 6.0.4/
-        ls
-        printf "\n"
-        cd qf-test.app/
-        ls
-        printf "\n"
-        cd Contents/
-        ls
+        cat ReadMeMacOS.txt
+        #ls
+        #printf "\n"
+        #cd qf-test.app/
+        #ls
+        #printf "\n"
+        #cd Contents/
+        #ls
       env:
         scaleuimac: ''
         fullVersion: '1234.5.6.7'
