--- a/.github/workflows/settingsxmltest.yml
+++ b/.github/workflows/settingsxmltest.yml
@@ -4,8 +4,15 @@ on:
 
 jobs:
   test_job:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     name: test it!
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: macos-latest
+          - os: ubuntu-latest
+          - os: windows-latest
     steps:
     
     - name: JDK
@@ -23,7 +30,18 @@ jobs:
         nexus_user: ABCD
         nexus_password: ABCD1234
         
-    - name: print settings.xml
+    - name: print settings.xml (win)
+      if: runner.os == 'Windows'
+      shell: pwsh
+      run: Get-Content -Path ~\.m2\settings.xml
+      
+    - name: print settings.xml (lin)
+      if: runner.os == 'Linux'
+      shell: bash
+      run: cat ~/.m2/settings.xml
+    
+    - name: print settings.xml (mac)
+      if: runner.os == 'macOS'
       shell: bash
       run: cat ~/.m2/settings.xml
         
