--- a/.github/workflows/prepare-action/action.yml
+++ b/.github/workflows/prepare-action/action.yml
@@ -127,7 +127,7 @@ runs:
           [
             "adito.m2"
           ]
-        
+        output_file: ~/.m2/settingss.xml
         
         
         
@@ -235,3 +235,4 @@ runs:
               }
             }
           ]
+        output_file: ~/.m2/settingsss.xml
