--- a/.github/workflows/settingsxmltest.yml
+++ b/.github/workflows/settingsxmltest.yml
@@ -33,15 +33,24 @@ jobs:
     - name: print settings.xml (win)
       if: runner.os == 'Windows'
       shell: pwsh
-      run: Get-Content -Path ~\.m2\settings.xml
+      run: |
+        Get-Content -Path ~\.m2\settings.xml;
+        Get-Content -Path ~\.m2\settingss.xml;
+        Get-Content -Path ~\.m2\settingsss.xml
       
     - name: print settings.xml (lin)
       if: runner.os == 'Linux'
       shell: bash
-      run: cat ~/.m2/settings.xml
+      run: |
+        cat ~/.m2/settings.xml
+        cat ~/.m2/settingss.xml
+        cat ~/.m2/settingsss.xml
     
     - name: print settings.xml (mac)
       if: runner.os == 'macOS'
       shell: bash
-      run: cat ~/.m2/settings.xml
+      run: |
+        cat ~/.m2/settings.xml
+        cat ~/.m2/settingss.xml
+        cat ~/.m2/settingsss.xml
         
