--- a/.github/workflows/settingsxmltest.yml
+++ b/.github/workflows/settingsxmltest.yml
@@ -36,7 +36,7 @@ jobs:
       run: |
         Get-Content -Path ~\.m2\settings.xml;
         Get-Content -Path ~\.m2\settingss.xml;
-        Get-Content -Path ~\.m2\settingsss.xml
+        # Get-Content -Path ~\.m2\settingsss.xml
       
     - name: print settings.xml (lin)
       if: runner.os == 'Linux'
@@ -44,7 +44,7 @@ jobs:
       run: |
         cat ~/.m2/settings.xml
         cat ~/.m2/settingss.xml
-        cat ~/.m2/settingsss.xml
+        # cat ~/.m2/settingsss.xml
     
     - name: print settings.xml (mac)
       if: runner.os == 'macOS'
@@ -52,5 +52,5 @@ jobs:
       run: |
         cat ~/.m2/settings.xml
         cat ~/.m2/settingss.xml
-        cat ~/.m2/settingsss.xml
+        # cat ~/.m2/settingsss.xml
         
