--- a/.github/workflows/prepare-action/action.yml
+++ b/.github/workflows/prepare-action/action.yml
@@ -185,14 +185,7 @@ runs:
               "id": "adito.m2",
               "pluginRepositories": {
                 "pluginRepository": {
-                  "id": "central",
-                  "url": "https://nexus.adito.cloud/repository/public",
-                  "releases": {
-                    "enabled": "true"
-                  },
-                  "snapshots": {
-                    "enabled": "true"
-                  }
+                  "id": "central"
                 }
               },
               "properties": {
