--- a/.github/workflows/prepare-action/action.yml
+++ b/.github/workflows/prepare-action/action.yml
@@ -182,12 +182,7 @@ runs:
         profiles: >
           [
             {
-              "id": "adito.m2",
-              "pluginRepositories": {
-                "pluginRepository": {
-                  "id": "central"
-                }
-              },
+              "id": "FLAG",
               "properties": {
                 "repository.releases": "https://nexus.adito.cloud/repository/releases/",
                 "repository.snapshots": "https://nexus.adito.cloud/repository/snapshots/"
