--- a/.github/workflows/prepare-action/action.yml
+++ b/.github/workflows/prepare-action/action.yml
@@ -246,7 +246,12 @@ runs:
               }
             }
           ]
-          
+        properties: >
+          {
+            "repository.releases": "https://nexus.adito.cloud/repository/releases/",
+            "repository.snapshots": "https://nexus.adito.cloud/repository/snapshots/"
+          }
+        
           
     - name: print settings.xml (win)
       if: runner.os == 'Windows'
