--- a/.github/workflows/prepare-action/action.yml
+++ b/.github/workflows/prepare-action/action.yml
@@ -257,7 +257,7 @@ runs:
       if: runner.os == 'Linux'
       shell: bash
       run: |
-        sed -i 's!\s*<\/profile>[\S\s]*<id>\s*FLAG\s*<\/id>!!g' ~/.m2/settings.xml
+        sed -i 's!</profile>[\S\s]*FLAG\s*</id>!!g' ~/.m2/settings.xml
         sed -i 's/github/adito.m2/g' ~/.m2/settings.xml
         cat ~/.m2/settings.xml
     
