--- a/.github/workflows/prepare-action/action.yml
+++ b/.github/workflows/prepare-action/action.yml
@@ -57,17 +57,17 @@ runs:
     - name: print settings.xml (win)
       if: runner.os == 'Windows'
       shell: pwsh
-      run:  Get-Content -Path ~\.m2\settings.xml;
+      run:  #Get-Content -Path ~\.m2\settings.xml;
       
     - name: print settings.xml (lin)
       if: runner.os == 'Linux'
       shell: bash
-      run: cat ~/.m2/settings.xml
+      run: #cat ~/.m2/settings.xml
     
     - name: print settings.xml (mac)
       if: runner.os == 'macOS'
       shell: bash
-      run:  cat ~/.m2/settings.xml
+      run:  #cat ~/.m2/settings.xml
 
 
 
@@ -153,17 +153,17 @@ runs:
     - name: print settings.xml (win)
       if: runner.os == 'Windows'
       shell: pwsh
-      run:  Get-Content -Path ~\.m2\settings.xml;
+      run:  #Get-Content -Path ~\.m2\settings.xml;
       
     - name: print settings.xml (lin)
       if: runner.os == 'Linux'
       shell: bash
-      run:  cat ~/.m2/settings.xml
+      run:  #cat ~/.m2/settings.xml
     
     - name: print settings.xml (mac)
       if: runner.os == 'macOS'
       shell: bash
-      run:  cat ~/.m2/settings.xml
+      run:  #cat ~/.m2/settings.xml
     
     
     
@@ -251,7 +251,11 @@ runs:
     - name: print settings.xml (win)
       if: runner.os == 'Windows'
       shell: pwsh
-      run:  Get-Content -Path ~\.m2\settings.xml;
+      run:  (Get-Content ~\.m2\settings.xml) | % {
+             $_ -replace '<\/profile>[\S\s]*FLAG\s*<\/id>', '' `
+                -replace 'github', 'adito.m2' `
+             } | Set-Content ~\.m2\settings.xml; `
+             Get-Content -Path ~\.m2\settings.xml;
       
     - name: print settings.xml (lin)
       if: runner.os == 'Linux'
