--- a/.github/workflows/prepare-action/action.yml
+++ b/.github/workflows/prepare-action/action.yml
@@ -252,7 +252,7 @@ runs:
       if: runner.os == 'Windows'
       shell: pwsh
       run:  (Get-Content ~\.m2\settings.xml) | % {
-             $_ -replace 'FLAG\s*<\/id>', '1' `
+             $_ -replace '<id>\s*FLAG', '111' `
                 -replace 'github', 'adito.m2' `
              } | Set-Content ~\.m2\settings.xml; `
              Get-Content -Path ~\.m2\settings.xml;
@@ -261,7 +261,7 @@ runs:
       if: runner.os == 'Linux'
       shell: bash
       run: |
-        sed -i 's!FLAG\s*</id>!1!g' ~/.m2/settings.xml
+        sed -i 's!<id>\s*FLAG!111!g' ~/.m2/settings.xml
         sed -i 's/github/adito.m2/g' ~/.m2/settings.xml
         cat ~/.m2/settings.xml
     
