--- a/.github/workflows/prepare-action/action.yml
+++ b/.github/workflows/prepare-action/action.yml
@@ -263,7 +263,7 @@ runs:
       if: runner.os == 'Linux'
       shell: bash
       run: |
-        perl -i -pe 's/<\/profile>\n[\S\s]*FLAG\n\s*<\/id>/111/g' ~/.m2/settings.xml
+        perl -i -pe 's/FLAG\n/111/g' ~/.m2/settings.xml
         sed -i 's/github/adito.m2/g' ~/.m2/settings.xml
         cat ~/.m2/settings.xml
     
