--- a/.github/workflows/prepare-action/action.yml
+++ b/.github/workflows/prepare-action/action.yml
@@ -251,7 +251,7 @@ runs:
     - name: print settings.xml (win)
       if: runner.os == 'Windows'
       shell: pwsh
-      run:  (Get-Content ~\.m2\settings.xml -Raw) -replace '\n\s*FLAG', '111' -replace 'github', 'adito.m2'
+      run:  (Get-Content ~\.m2\settings.xml -Raw) -replace '<id>\n\s*FLAG\n\s*<', '111' -replace 'github', 'adito.m2'
               
              
       # <\/profile>[\S\s]*FLAG\s*<\/id>
@@ -260,7 +260,7 @@ runs:
       if: runner.os == 'Linux'
       shell: bash
       run: |
-        perl -i -pe 's/FLAG\n      <\/id>/111/g' ~/.m2/settings.xml
+        perl -i -pe 's/FLAG\n<\/id>/111/g' ~/.m2/settings.xml
         sed -i 's/github/adito.m2/g' ~/.m2/settings.xml
         cat ~/.m2/settings.xml
     
