--- a/.github/workflows/prepare-action/action.yml
+++ b/.github/workflows/prepare-action/action.yml
@@ -101,7 +101,8 @@ runs:
       if: runner.os == 'Windows'
       shell: pwsh
       run: $NewContent = (Get-Content ~\.m2\settings.xml -Raw) -replace '\n\s*</profile>[\S\n\s]*FLAG\n\s*</id>', '' -replace 'github', 'adito.m2'; `
-           Set-Content -Path "~\.m2\settings.xml" -Value $NewContent
+           Set-Content -Path "~\.m2\settings.xml" -Value $NewContent;
+           Get-Content ~\.m2\settings.xml
              
       # <\/profile>[\S\s]*FLAG\s*<\/id>
       # sed -i 's!\s*FLAG!111!g' ~/.m2/settings.xml
