--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -15,7 +15,12 @@ jobs:
           - os: ubuntu-latest
           - os: windows-latest
     steps:
-    
+      
+      
+    # Checkout Repository
+    - name: Checkout
+      uses: actions/checkout@v3
+        
       # download qfs
     - name: download qftest-sfx.exe (win)
       if: runner.os == 'Windows'
